--- a/index.html
+++ b/index.html
@@ -1,3 +1,77 @@
-<H1> Xin chào</H1>
-không có gì 
-# ádasđ
+# Các thông tin vô cùng quan trọng khi học tại SCUT
+## Mục lục
+- [Các thông tin vô cùng quan trọng khi học tại SCUT](README.md?#các-thông-tin-vô-cùng-quan-trọng-khi-học-tại-scut)  
+   * [Mục lục](README.md?#mục-lục)  
+- [Chung các ngành, các cấp bậc](README.md?#chung-các-ngành-các-cấp-bậc)  
+   * [Các phần mềm cần thiết](README.md?#các-phần-mềm-cần-thiết)  
+   * [Kho tài liệu tham khảo, báo chí đã được mua](README.md?#kho-tài-liệu-tham-khảo-báo-chí-đã-được-mua)  
+   * [Tài liệu có thể download luôn](README.md?#tài-liệu-có-thể-download-luôn)  
+- [Tiến sỹ](README.md?#tiến-sỹ)  
+   * [Nhập học](README.md?#nhập-học)  
+   * [Học Tiếng](README.md?#học-tiếng)  
+   * [Bảo vệ đề cương](README.md?#bảo-vệ-đề-cương)  
+   * [Viết báo](README.md?#viết-báo)  
+   * [Viết Luận án](README.md?#viết-luận-án)  
+- [Thạc sỹ](README.md?#thạc-sỹ)  
+- [Đại học](README.md?#Đại-học)  
+- [Học tiếng](README.md?#học-tiếng)  
+- [Khác](README.md?#khác)  
+---
+# Chung các ngành, các cấp bậc
+- Lịch công việc theo tháng:
+    - Tháng 1:
+    - Tháng 2:
+    - Tháng 3:
+    - Tháng 4:
+    - Tháng 5:
+    - Tháng 6:
+    - Tháng 7:
+    - Tháng 8:
+    - Tháng 9: Đầu tháng đặt vé, nghỉ lễ ngày 1/10-10/10 (có thể du di ít), lý này vé máy bay đang rẻ, chú ý săn khuyến mại
+    - Tháng 10:
+    - Tháng 11:
+    - Tháng 12: 
+- App, số điện thoại tham khảo:
+  - APP:
+    - App đặt vé máy bay, tàu hoả: 携程旅行 /Xiéchéng lǚxíng/ (Ctrip): hình con cá voi; 去哪 /Qù nǎ/
+    - Vietnam airline: 1821 888 0930 (Trần Huy Công)
+  - Quảng châu <=> bằng tường:
+    - Đặt vé tàu/máy bay: Ngọc Lan: wechat ID: lanngoc1
+    - Nhà xe Trường: GZ=> bằng tường: 135 2768 1092, 134 2446 2581
+    - xe ... Bến xe Việt tú nam: 1567 603 2188
+  - Xe tại Việt Nam:
+    - Xe Tuấn Huyền: Lạng sơn <=> Thái nguyên: 0164 668 9677
+    - Xe Khánh Hằng: Lạng sơn <=> Thái nguyên: 097 296 8355
+    
+## Các phần mềm cần thiết
+- Phần mềm học tiếng
+  - xxx
+- Phần mềm phiên dịch
+  - Google Translater
+  - Baidu translater
+- VPN cho Android:
+  - Turbo VPN [download](#)
+  - Master VPN [download](#)
+- Phần mềm quản lý tài liệu tham khảo
+## Kho tài liệu tham khảo, báo chí đã được mua
+- IEEE:
+- ....
+## Tài liệu có thể download luôn
+- Hướng dẫn viết bài báo khoa học: [Download](#)
+
+# Tiến sỹ
+## Nhập học
+## Học Tiếng
+## Bảo vệ đề cương
+## Viết báo
+## Viết Luận án
+
+# Thạc sỹ
+# Đại học
+# Học tiếng
+# Khác
+
+
+
+
+
