--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
 <meta name="msvalidate.01" content="5AFCC1FAD8C98F4A6B8F27B4945174A7" />
 <meta name="baidu-site-verification" content="Z7exQPkIs0" /> </head>
 <body class="direction-ltr page-templates">
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=728868367139964&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+	
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PM88NV7"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
@@ -873,5 +883,8 @@ Get started </a>
 </div>
 <div id="default_popup"></div>
 <div style="display:none" class="cookie-consent">Chúng tôi sử dụng cookies để cá nhân hóa nội dung được cung cấp bằng các phân tích &amp; các đối tác quảng cáo để cung cấp cho bạn những trải nghiệm dịch vụ tốt nhất. <a href="/cookie-policy">Thêm</a>.<a class="cookie-consent-close"><span class="glyphicon glyphicon-remove"></span></a></div> <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+<div class="fb-comments" data-href="https://tuananhvip.github.io/SCUT/" data-width="90%%" data-numposts="10"></div>
+
 </body>
 </html>
