--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.1&appId=728868367139964&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+	
 	<header class="trasparent_nav">
 		<div class="wrapper">
 			<div class="logo">
@@ -138,7 +146,9 @@
 			</ul>
 		</div>
 	</section><!-- End clients -->
-
+	
+	<div class="fb-comments" data-href="https://tuananhvip.github.io/SCUT/" data-width="90%" data-numposts="30"></div>
+	
 	<footer>
 		<div class="wrapper">
 			<section class="cta cta_footer">
