--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 			</ul>
 		</div>
 	</section><!-- End clients -->
-	
-	<div class="fb-comments" data-href="https://tuananhvip.github.io/SCUT/" data-width="90%" data-numposts="30"></div>
-	
+	<center>
+	<div class="fb-comments" data-href="https://tuananhvip.github.io/SCUT/" data-width="100%" data-numposts="30"></div>
+	</center>
 	<footer>
 		<div class="wrapper">
 			<section class="cta cta_footer">
