--- a/index.html
+++ b/index.html
@@ -19,6 +19,37 @@
   js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.1&appId=728868367139964&autoLogAppEvents=1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+<!--Đoạn 1-->
+<div id="fb-root"></div>
+<script>(function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9&appId=284491135498376";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+<!--Hết đoạn 1-->
+ 
+<!--Đoạn 2-->
+<script>
+    jQuery(document).ready(function () {
+        jQuery(".chat_fb").click(function() {
+            jQuery('#minimize-facechat').toggle();
+            jQuery('.fchat').toggle(100);
+        });
+    });
+</script>
+<div id="cfacebook">
+    <a href="javascript:" class="chat_fb"><i class="fa fa-facebook-square"></i>Tư vấn qua facebook <span id="minimize-facechat"></span></a>
+    <div class="fchat">
+        <div class="fb-page" data-tabs="messages" data-href="https://www.facebook.com/mangseal.vn/" data-width="270" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"></div>
+    </div>
+</div>
+<!--Hết đoạn 2-->
+	
+	
 	
 	<header class="trasparent_nav">
 		<div class="wrapper">
@@ -147,7 +178,7 @@
 		</div>
 	</section><!-- End clients -->
 	<center>
-	<div class="fb-comments" data-href="https://tuananhvip.github.io/SCUT/" data-width="90%" data-numposts="30"></div>
+	<div class="fb-comments" data-href="https://tuananhvip.github.io/SCUT/" data-width="100%" data-numposts="30"></div>
 	</center>
 	<footer>
 		<div class="wrapper">
