--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <div id="cfacebook">
     <a href="javascript:" class="chat_fb"><i class="fa fa-facebook-square"></i>Tư vấn qua facebook <span id="minimize-facechat"></span></a>
     <div class="fchat">
-        <div class="fb-page" data-tabs="messages" data-href="https://www.facebook.com/mangseal.vn/" data-width="270" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"></div>
+        <div class="fb-page" data-tabs="messages" data-href="https://www.facebook.com/SDA.Clever.Things/" data-width="270" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"></div>
     </div>
 </div>
 <!--Hết đoạn 2-->
